# engraver

./: .gitmodules  Cargo.toml  LICENSE
.github/workflows/: main.yml
crates/engraver/: Cargo.toml
crates/engraver-parser/: Cargo.toml
crates/engraver-parser/src/: lib.rs
crates/engraver/src/: error.rs  lib.rs  svg.rs
crates/engraver/src/model/: chord.rs  clef.rs  context.rs  key_signature.rs  measure.rs  mod.rs  note.rs  pitch.rs  staff.rs
crates/engraver/src/render/: engraving_defaults_extensions.rs  glyph_data_extensions.rs  math.rs  mod.rs
crates/engraver/src/render/context/: beam.rs  mod.rs
crates/engraver/src/render/input/: barline.rs  beam.rs  chord.rs  duration.rs  key_signature.rs  measure.rs  mod.rs  note.rs  rest.rs  time_signature.rs
crates/engraver/src/render/ir/: convert.rs  element.rs  group.rs  mod.rs  polygon.rs  size.rs  symbol.rs
crates/engraver/tests/it/: accidentals.rs  barlines.rs  chords.rs  clefs.rs  helpers.rs  key_signatures.rs  main.rs  notes.rs  rests.rs  time_signatures.rs
scripts/: gen-glyphs.sh
src/: error.rs  lib.rs  svg.rs
src/render/: ir.rs  math.rs  metadata_extensions.rs  mod.rs  stem.rs  stem_direction.rs
src/render/input/: accidental.rs  barline.rs  chord.rs  clef.rs  duration.rs  key_signature.rs  measure.rs  mod.rs  note.rs  rest.rs  staff.rs  time_signature.rs
src/render/ir/: coord.rs  element.rs  line.rs  mod.rs  rect.rs  text.rs
tests/it/: chords.rs  clefs.rs  helpers.rs  key_signatures.rs  main.rs  noteheads.rs  notes.rs  rests.rs  time_signatures.rs
