[package]
name = "engraver"
version = "0.1.0"
edition = "2021"

[dependencies]
smufl = "0.2.1"
strum = "0.24.1"
strum_macros = "0.24.3"
svg = "0.13.1"
thiserror = "1.0.40"
tracing = "0.1.37"

[[bin]]
name = "svg-test"

[dev-dependencies]
color-eyre = "0.6.2"
once_cell = "1.17.1"
rstest = { version = "0.17.0", default_features = false }
