[package]
name = "engraver"
version = "0.1.0"
edition = "2021"

[dependencies]
smufl = "0.2.1"
strum = "0.25.0"
strum_macros = "0.25.2"
svg = "0.13.1"
thiserror = "1.0.51"
tracing = "0.1.37"

[dev-dependencies]      
color-eyre = "0.6.2"
engraver-parser = { path = "../engraver-parser" }
once_cell = "1.18.0"