[package]
name = "engraver"
version = "0.1.0"
edition = "2021"

[dependencies]
smufl = "0.2.1"
strum = "0.26.2"
strum_macros = "0.26.2"
svg = "0.14.0"
thiserror = "1.0.59"
tracing = "0.1.40"

[dev-dependencies]      
color-eyre = "0.6.3"
engraver-parser = { path = "../engraver-parser" }
once_cell = "1.19.0"